# proxima-db

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/decision-log/: 0001-flat-store-layout.md  0002-portable-simd-distance-backend.md  0003-kmeans-design.md
.github/instructions/: code-quality.md  stage1-storage-next-steps.md  stage2-centroid-table.md
.github/knowledge/: current-state.md
.github/patterns/: brute-force-topk-search.md  flat-vector-storage.md  k-means-clustering.md  vector-space-partitioning.md
.github/workflows/: bench-baseline.yml  bench-pr.yml  rust-clippy.yml  rust.yml
common/: Cargo.toml
common/src/: distance.rs  lib.rs  topk.rs
common/tests/: distance.rs  topk.rs
coordinator/: Cargo.toml
coordinator/src/: clustering.rs  lib.rs  main.rs
coordinator/tests/: clustering.rs
proto/: cluster.proto
shard/: Cargo.toml  build.rs
shard/benches/: search_bench.rs
shard/src/: distance.rs  lib.rs  main.rs  state.rs  storage.rs
shard/tests/: distance.rs  search.rs  state.rs  storage.rs
