[package]
name = "shard"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
memmap2 = "0.9"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3"

[[bench]]
name = "search_bench"
harness = false
